projects/compiler/test/typechecker/invocation/error_optional_param_unknown.abra
func foo(a: Int, b = 123, c = true, d = "abcd"): Int = 123
foo(1, x: 123)